hikey: Update HDMI binary extraction in README
Change-Id: I9ef09de312034cfe674c7d5d222acfe7400f1069
Signed-off-by: Dmitry Shmidt <dimitrysh@google.com>

--- a/README
+++ b/README
@@ -1,10 +1,15 @@
 Running Android on hikey board:
 
-# TODO
-* Download HDMI binaries:
-
 * Compiling userspace:
+Pull AOSP source:
 $ repo init -u https://android.googlesource.com/platform/manifest -b master & repo sync -j24
+
+Download and extract HDMI binaries:
+$ wget https://dl.google.com/dl/android/aosp/linaro-hikey-20160226-67c37b1a.tgz
+$ tar xzf linaro-hikey-20160226-67c37b1a.tgz
+$ ./extract-linaro-hikey.sh
+
+Build:
 $ . ./build/envsetup.sh
 $ lunch hikey-userdebug
 $ make -j32
