hikey: add mtools installation to README
Change-Id: I4ca943f7a375f00c26a052e4bc0c0e24a9c96c56
Signed-off-by: Dmitry Shmidt <dimitrysh@google.com>

--- a/README
+++ b/README
@@ -9,6 +9,9 @@ $ wget https://dl.google.com/dl/android/aosp/linaro-hikey-20160226-67c37b1a.tgz
 $ tar xzf linaro-hikey-20160226-67c37b1a.tgz
 $ ./extract-linaro-hikey.sh
 
+Install mcopy utility:
+$ apt-get install mtools
+
 Build:
 $ . ./build/envsetup.sh
 $ lunch hikey-userdebug
