--- a/factory-images/README
+++ b/factory-images/README
@@ -6,3 +6,7 @@ $ make -j24  dist
 $ cd out/dist/
 $ . ../../device/linaro/hikey/factory-images/generate-factory-images-package.sh
 
+# Package with an existing image
+# First download the image to the android build top directory
+
+$ device/linaro/hikey/factory-images/generate-factory-images-package.sh
